--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^3.2.38"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.19.3",
     "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/test-utils": "^2.0.2",
+    "@vue/vue3-jest": "^29.1.1",
     "autoprefixer": "^10.4.12",
+    "babel-jest": "^29.1.0",
     "daisyui": "^2.31.0",
+    "jest": "^29.1.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "vite": "^3.0.9"
